Utworzono za pomocą Colaboratory

--- a/Część_3_Instrukcje_sterujące.ipynb
+++ b/Część_3_Instrukcje_sterujące.ipynb
@@ -347,8 +347,8 @@
     {
       "cell_type": "code",
       "source": [
-        "x = 123\n",
-        "n = 40  # maksymalna liczba iteracji\n",
+        "x = 1230\n",
+        "n = 60  # maksymalna liczba iteracji\n",
         "for i in range(n):\n",
         "  print(x)\n",
         "  if x % 2 == 0:\n",
@@ -366,18 +366,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Q0qqTNPfNmw",
-        "outputId": "fa70fbbb-b424-4beb-d7d6-060f2afbe8a9"
+        "outputId": "59a70c01-b0c9-4385-f278-2a0aee7ebd76"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "123\n",
-            "185\n",
-            "278\n",
-            "139\n",
+            "1230\n",
+            "615\n",
+            "923\n",
+            "1385\n",
+            "2078\n",
+            "1039\n",
+            "1559\n",
+            "2339\n",
+            "3509\n",
+            "5264\n",
+            "2632\n",
+            "1316\n",
+            "658\n",
+            "329\n",
+            "494\n",
+            "247\n",
+            "371\n",
+            "557\n",
+            "836\n",
+            "418\n",
             "209\n",
             "314\n",
             "157\n",
@@ -406,7 +422,7 @@
             "4\n",
             "2\n",
             "1\n",
-            "Jedynka w 31 tym kroku.\n"
+            "Jedynka w 47 tym kroku.\n"
           ]
         }
       ]
@@ -785,13 +801,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "36kIoJC0cqsp",
-        "outputId": "0c713237-1e56-4baa-f31b-801fa7c03604"
+        "outputId": "8f77cadb-7e91-4bd2-9ba0-afaef0994138"
       },
       "outputs": [
         {
@@ -817,6 +833,34 @@
         "\n",
         "a.append(6)\n",
         "print(b)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = a.copy()\n",
+        "if a is c:\n",
+        "    print('To ten sam obiekt')\n",
+        "else :\n",
+        "    print('To różne obiekty')\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "kwzJYnoXwGUP",
+        "outputId": "80420293-0561-4c2e-ad9f-20e6367c63bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "To różne obiekty\n"
+          ]
+        }
       ]
     },
     {
