Utworzono za pomocą Colaboratory

--- a/Część_3_Funkcje_i_rekurencja.ipynb
+++ b/Część_3_Funkcje_i_rekurencja.ipynb
@@ -210,21 +210,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "smoking-universal",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "smoking-universal",
-        "outputId": "29856769-89c8-41ae-c8de-84783d0c5808"
+        "outputId": "ca37d3cf-0ffa-4e3e-da75-4b356f11d961"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(1.2188843976468355e-05, 0.9999976880740077)\n"
+            "(8.657302851822202e-06, 0.9999939406300256)\n"
           ]
         }
       ],
@@ -235,6 +235,42 @@
         "\n",
         "a = [random.random() for _ in range(100000)]\n",
         "print(minimax1(a))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def minimax6(a):\n",
+        "  mmin, mmax, por = a[0], a[0], 0\n",
+        "  for x in a[1:]: \n",
+        "    por += 2\n",
+        "    if x < mmin:\n",
+        "      mmin = x\n",
+        "      por -= 1\n",
+        "    elif x > mmax:\n",
+        "      mmax = x\n",
+        "  return mmin, mmax, por\n",
+        "\n",
+        "print(minimax6(a))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "0_aY1yUZ1ldC",
+        "outputId": "83f0fc36-11f1-4fc4-a137-476e21404da0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "0_aY1yUZ1ldC",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(8.657302851822202e-06, 0.9999939406300256, 199980)\n"
+          ]
+        }
       ]
     },
     {
@@ -292,21 +328,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "communist-continent",
       "metadata": {
-        "id": "communist-continent"
+        "id": "communist-continent",
+        "outputId": "6dd4e3cc-83a0-4290-c121-0320a247d1ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(8.657302851822202e-06, 0.9999939406300256, 165534)\n"
+          ]
+        }
+      ],
       "source": [
         "def minimax3(a):\n",
         "    leng = len(a)\n",
         "    if leng <= 2:\n",
-        "        return min(a), max(a)\n",
+        "        return min(a), max(a), leng-1\n",
         "    else:\n",
         "        x = leng // 2\n",
-        "        min1, max1 = minimax3(a[0:x])\n",
-        "        min2, max2 = minimax3(a[x:leng])\n",
+        "        min1, max1, por1 = minimax3(a[0:x])\n",
+        "        min2, max2, por2 = minimax3(a[x:leng])\n",
+        "        por = por1 + por2 + 2\n",
         "        if min1 < min2:\n",
         "            min3 = min1\n",
         "        else: \n",
@@ -315,27 +364,29 @@
         "            max3 = max1\n",
         "        else:\n",
         "            max3 = max2\n",
-        "        return min3, max3"
+        "        return min3, max3, por\n",
+        "\n",
+        "print(minimax3(a))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "julian-decade",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "julian-decade",
-        "outputId": "f71864cc-4cf4-4bb4-d265-bfdff5cea8a7"
+        "outputId": "5bfcacf6-6aa7-4e6d-d0c3-efcfd38f08b0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(1.2188843976468355e-05, 0.9999976880740077)\n",
-            "(1.2188843976468355e-05, 0.9999976880740077)\n"
+            "(8.657302851822202e-06, 0.9999939406300256, 199980)\n",
+            "(8.657302851822202e-06, 0.9999939406300256, 165534)\n"
           ]
         }
       ],
@@ -344,15 +395,16 @@
         "    leng = g - d\n",
         "    if leng <= 2:\n",
         "        min1 = max1 = a[d]\n",
-        "        if a[g-1] < min1:\n",
+        "        if leng > 1 and a[g-1] < min1:\n",
         "            min1 = a[g-1]\n",
         "        else: # if a[g-1] > max1:\n",
         "            max1 = a[g-1]\n",
-        "        return min1, max1\n",
+        "        return min1, max1, leng-1\n",
         "    else:\n",
         "        x = leng // 2\n",
-        "        min1, max1 = minimax4(a, d, d + x)\n",
-        "        min2, max2 = minimax4(a, d + x, g)\n",
+        "        min1, max1, por1 = minimax4(a, d, d + x)\n",
+        "        min2, max2, por2 = minimax4(a, d + x, g)\n",
+        "        por = por1 + por2 + 2\n",
         "        if min1 < min2:\n",
         "            min3 = min1\n",
         "        else: \n",
@@ -361,9 +413,9 @@
         "            max3 = max1\n",
         "        else:\n",
         "            max3 = max2\n",
-        "        return min3, max3\n",
+        "        return min3, max3, por\n",
         "    \n",
-        "print(minimax1(a))\n",
+        "print(minimax6(a))\n",
         "print(minimax4(a, 0, len(a)))"
       ]
     },
@@ -379,30 +431,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "generic-civilian",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "generic-civilian",
-        "outputId": "215e0857-760c-46de-f9d9-9d05dbfb5e53"
+        "outputId": "e4bf3b31-76c2-42f3-b53a-f2bb98862e3e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "100 loops, best of 5: 3.86 ms per loop\n",
-            "100 loops, best of 5: 6.73 ms per loop\n",
-            "100 loops, best of 5: 80.4 ms per loop\n",
-            "100 loops, best of 5: 55.3 ms per loop\n"
+            "3.15 ms ± 60.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+            "10.4 ms ± 135 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+            "81.7 ms ± 284 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+            "57 ms ± 147 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
           ]
         }
       ],
       "source": [
         "%timeit -n100 mm1 = minimax1(a)\n",
-        "%timeit -n100 mm2 = minimax2(a)\n",
+        "%timeit -n100 mm2 = minimax6(a)\n",
         "%timeit -n100 mm3 = minimax3(a)\n",
         "%timeit -n100 mm4 = minimax4(a, 0, len(a))"
       ]
@@ -692,13 +744,98 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "domestic-entrance",
       "metadata": {
         "id": "domestic-entrance"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def f(n):\n",
+        "  if n % 2 == 0:\n",
+        "    return n // 2\n",
+        "  else:\n",
+        "    return (3 * n + 1) //2\n",
+        "\n",
+        "def Collatz(n):\n",
+        "  lista = [n]\n",
+        "  while n > 1:\n",
+        "    n = f(n)\n",
+        "    lista.append(n)\n",
+        "  return lista"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Collatz(3))"
+      ],
+      "metadata": {
+        "id": "k2NyOlLdE9je",
+        "outputId": "6b529a9a-aa42-472f-9735-c524e733470e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "k2NyOlLdE9je",
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3, 5, 8, 4, 2, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Collatz(143))"
+      ],
+      "metadata": {
+        "id": "ISapvuoDFBbB",
+        "outputId": "065ada75-89c9-478d-da1c-c000da8ef2d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ISapvuoDFBbB",
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[143, 215, 323, 485, 728, 364, 182, 91, 137, 206, 103, 155, 233, 350, 175, 263, 395, 593, 890, 445, 668, 334, 167, 251, 377, 566, 283, 425, 638, 319, 479, 719, 1079, 1619, 2429, 3644, 1822, 911, 1367, 2051, 3077, 4616, 2308, 1154, 577, 866, 433, 650, 325, 488, 244, 122, 61, 92, 46, 23, 35, 53, 80, 40, 20, 10, 5, 8, 4, 2, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(Collatz(11329934198377334543))"
+      ],
+      "metadata": {
+        "id": "qHa2cU_IFGzj",
+        "outputId": "9763f3e2-f04a-4d74-a4af-699d7852a1c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "qHa2cU_IFGzj",
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[11329934198377334543, 16994901297566001815, 25492351946349002723, 38238527919523504085, 57357791879285256128, 28678895939642628064, 14339447969821314032, 7169723984910657016, 3584861992455328508, 1792430996227664254, 896215498113832127, 1344323247170748191, 2016484870756122287, 3024727306134183431, 4537090959201275147, 6805636438801912721, 10208454658202869082, 5104227329101434541, 7656340993652151812, 3828170496826075906, 1914085248413037953, 2871127872619556930, 1435563936309778465, 2153345904464667698, 1076672952232333849, 1615009428348500774, 807504714174250387, 1211257071261375581, 1816885606892063372, 908442803446031686, 454221401723015843, 681332102584523765, 1021998153876785648, 510999076938392824, 255499538469196412, 127749769234598206, 63874884617299103, 95812326925948655, 143718490388922983, 215577735583384475, 323366603375076713, 485049905062615070, 242524952531307535, 363787428796961303, 545681143195441955, 818521714793162933, 1227782572189744400, 613891286094872200, 306945643047436100, 153472821523718050, 76736410761859025, 115104616142788538, 57552308071394269, 86328462107091404, 43164231053545702, 21582115526772851, 32373173290159277, 48559759935238916, 24279879967619458, 12139939983809729, 18209909975714594, 9104954987857297, 13657432481785946, 6828716240892973, 10243074361339460, 5121537180669730, 2560768590334865, 3841152885502298, 1920576442751149, 2880864664126724, 1440432332063362, 720216166031681, 1080324249047522, 540162124523761, 810243186785642, 405121593392821, 607682390089232, 303841195044616, 151920597522308, 75960298761154, 37980149380577, 56970224070866, 28485112035433, 42727668053150, 21363834026575, 32045751039863, 48068626559795, 72102939839693, 108154409759540, 54077204879770, 27038602439885, 40557903659828, 20278951829914, 10139475914957, 15209213872436, 7604606936218, 3802303468109, 5703455202164, 2851727601082, 1425863800541, 2138795700812, 1069397850406, 534698925203, 802048387805, 1203072581708, 601536290854, 300768145427, 451152218141, 676728327212, 338364163606, 169182081803, 253773122705, 380659684058, 190329842029, 285494763044, 142747381522, 71373690761, 107060536142, 53530268071, 80295402107, 120443103161, 180664654742, 90332327371, 135498491057, 203247736586, 101623868293, 152435802440, 76217901220, 38108950610, 19054475305, 28581712958, 14290856479, 21436284719, 32154427079, 48231640619, 72347460929, 108521191394, 54260595697, 81390893546, 40695446773, 61043170160, 30521585080, 15260792540, 7630396270, 3815198135, 5722797203, 8584195805, 12876293708, 6438146854, 3219073427, 4828610141, 7242915212, 3621457606, 1810728803, 2716093205, 4074139808, 2037069904, 1018534952, 509267476, 254633738, 127316869, 190975304, 95487652, 47743826, 23871913, 35807870, 17903935, 26855903, 40283855, 60425783, 90638675, 135958013, 203937020, 101968510, 50984255, 76476383, 114714575, 172071863, 258107795, 387161693, 580742540, 290371270, 145185635, 217778453, 326667680, 163333840, 81666920, 40833460, 20416730, 10208365, 15312548, 7656274, 3828137, 5742206, 2871103, 4306655, 6459983, 9689975, 14534963, 21802445, 32703668, 16351834, 8175917, 12263876, 6131938, 3065969, 4598954, 2299477, 3449216, 1724608, 862304, 431152, 215576, 107788, 53894, 26947, 40421, 60632, 30316, 15158, 7579, 11369, 17054, 8527, 12791, 19187, 28781, 43172, 21586, 10793, 16190, 8095, 12143, 18215, 27323, 40985, 61478, 30739, 46109, 69164, 34582, 17291, 25937, 38906, 19453, 29180, 14590, 7295, 10943, 16415, 24623, 36935, 55403, 83105, 124658, 62329, 93494, 46747, 70121, 105182, 52591, 78887, 118331, 177497, 266246, 133123, 199685, 299528, 149764, 74882, 37441, 56162, 28081, 42122, 21061, 31592, 15796, 7898, 3949, 5924, 2962, 1481, 2222, 1111, 1667, 2501, 3752, 1876, 938, 469, 704, 352, 176, 88, 44, 22, 11, 17, 26, 13, 20, 10, 5, 8, 4, 2, 1]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
