Utworzono za pomocą Colaboratory

--- a/Grafy3.ipynb
+++ b/Grafy3.ipynb
@@ -291,7 +291,7 @@
       "metadata": {
         "id": "BnQwYJsCBUHd"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -303,39 +303,25 @@
         "  \"\"\"\n",
         "  file = open(filename + \".txt\", \"w\") #otwarcie pliku do zapisu\n",
         "\n",
-        "  for v in graph:\n",
-        "    if len(graph[v]) != 0:\n",
-        "      for u in graph[v]:\n",
+        "  for v in graph:\n",
+        "    if len(graph[v]) != 0:\n",
+        "      for u in graph[v]:\n",
         "        if directed or u < v:\n",
-        "          line = \"{} {}\".format(v, u) # dołączamy ' u' na koniec napisu\n",
-        "          line += \"\\n\"      #koniec wiersza\n",
-        "          file.write(line)  #zapisujemy wiersz do pliku\n",
-        "          line = \"\"\n",
+        "          line = \"{} {}\".format(v, u) # dołączamy ' u' na koniec napisu\n",
+        "          line += \"\\n\"      #koniec wiersza\n",
+        "          file.write(line)  #zapisujemy wiersz do pliku\n",
+        "          line = \"\"\n",
         "    else:\n",
-        "      line = F\"{v}\\n\" # dodaje tylko wierzcho\n",
+        "      line = F\"{v}\\n\" # dodaje tylko wierzchołek\n",
         "      file.write(line)\n",
-        "      line = \"\"\n",
+        "      line = \"\"\n",
         "  file.close()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 133
-        },
-        "id": "ymf4_fCACX3x",
-        "outputId": "ab08393f-e1a0-4314-c50e-27c62dd861a2"
+        "id": "ymf4_fCACX3x"
       },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-3e92f4c91683>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    for v in graph:\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character in identifier\n"
-          ]
-        }
-      ]
+      "execution_count": 11,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -348,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 12,
       "metadata": {
         "id": "eC8orOJtIBrq"
       },
@@ -421,7 +407,7 @@
       "metadata": {
         "id": "YLwYOq7eC-0d"
       },
-      "execution_count": 36,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -476,7 +462,7 @@
       "metadata": {
         "id": "3-1n0msxKFXe"
       },
-      "execution_count": 39,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -509,7 +495,7 @@
       "metadata": {
         "id": "EiKQ0fToQMs1"
       },
-      "execution_count": 47,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -543,9 +529,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ac8uoopmGQ89",
-        "outputId": "ba6b4191-9891-4aab-a844-d606686069d3"
+        "outputId": "3cd8c6c9-fcdc-4ce2-88d5-79f8304ce838"
       },
-      "execution_count": 37,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,20 +586,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rz9ArAAqE4vu",
-        "outputId": "5823870e-913d-4ec7-c4c7-c250ee8872d6"
+        "outputId": "58e32cdf-55e5-4ded-dd70-bf48b0de912d"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Overwriting lista.txt\n"
+            "Writing lista.txt\n"
           ]
         }
       ],
@@ -629,25 +615,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "u58KJmQpFJYn",
-        "outputId": "c5ac81fc-7461-4502-b1ef-96128267f1ff"
+        "outputId": "a9f257b4-b24c-4044-a697-6740a780ec2e"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "A B\n",
             "B C\n",
             "B D\n",
             "D C\n",
             "E\n",
-            "F"
+            "F\n"
           ]
         }
       ],
@@ -657,18 +643,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "RGf3JNqUGBDW",
-        "outputId": "e514d383-8c54-49ca-d3e4-f87b5c043a73"
+        "outputId": "fb254318-c77d-46e2-aa22-1d72c0768250"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "A :  B\n",
             "B :  A  C  D\n",
@@ -686,18 +672,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6y-a_hfhGpaQ",
-        "outputId": "b6202090-6300-4f17-8b9a-675d0987d3aa"
+        "outputId": "6e4be5b4-3a5d-4902-f0a8-dde1201e28be"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "slipki :  kalesony\n",
             "kalesony :  spodnie\n",
@@ -728,18 +714,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "A6-i7eGAK8Lt",
-        "outputId": "17ff54d5-9ba3-4634-84cb-068533f23807"
+        "outputId": "a9445f1b-7068-4b62-b871-d26fed22d779"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1 :  2  3\n",
             "2 :  1\n",
@@ -777,18 +763,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "URpJ0hnHQpoa",
-        "outputId": "9576f4f4-1b4d-41c6-d255-e72356634fb5"
+        "outputId": "ca2c70c5-4517-41f3-83e4-86f7d74a8503"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1 :  2  3\n",
             "2 :  1\n",
@@ -804,18 +790,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DGWY89xLQ_ni",
-        "outputId": "7894be44-1966-4734-f4e7-72775b1d7253"
+        "outputId": "cfc544ad-2f88-4b47-cbad-d17f33c9645e"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "1 :  2  3  4  5  6  7  8  9  10  11  12\n",
             "2 :  1\n",
@@ -847,18 +833,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "m3pJaAmT8RMB",
-        "outputId": "36b0202b-ce8b-4471-8b5d-fd9a565f52a8"
+        "outputId": "98e2658c-841f-4611-b884-e8f2a3490371"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "['a', 'b', 'c', 'd', 'e']\n",
             "[[0 1 1 0 0]\n",
@@ -888,27 +874,27 @@
             "4 :  5\n",
             "5 :\n",
             "----------------------\n",
-            "1 :\n",
-            "2 :  3  6  7\n",
-            "3 :  2  7  9\n",
-            "4 :  6  8\n",
-            "5 :  6  8  9\n",
-            "6 :  2  4  5  8  10\n",
-            "7 :  2  3  8  9\n",
-            "8 :  4  5  6  7  10\n",
-            "9 :  3  5  7  10\n",
-            "10 :  6  8  9\n",
+            "1 :  2  10\n",
+            "2 :  1  3  5  6  8\n",
+            "3 :  2  5\n",
+            "4 :  8  10\n",
+            "5 :  2  3  8\n",
+            "6 :  2  7\n",
+            "7 :  6  10\n",
+            "8 :  2  4  5\n",
+            "9 :\n",
+            "10 :  1  4  7\n",
             "----------------------\n",
-            "1 :\n",
-            "2 :  3  6  7\n",
-            "3 :  2  7  9\n",
-            "4 :  6  8\n",
-            "5 :  6  8  9\n",
-            "6 :  2  4  5  8  10\n",
-            "7 :  2  3  8  9\n",
-            "8 :  4  5  6  7  10\n",
-            "9 :  3  5  7  10\n",
-            "10 :  6  8  9\n"
+            "1 :  2  10\n",
+            "2 :  1  3  5  6  8\n",
+            "3 :  2  5\n",
+            "4 :  8  10\n",
+            "5 :  2  3  8\n",
+            "6 :  2  7\n",
+            "7 :  6  10\n",
+            "8 :  2  4  5\n",
+            "9 :\n",
+            "10 :  1  4  7\n"
           ]
         }
       ],
@@ -955,36 +941,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A4yDv_VTOBtZ",
-        "outputId": "df1154f6-c442-41e0-df79-c4e282e4b47b"
+        "outputId": "c1536bb5-d13d-4174-9c02-2126d1d1f8ff"
       },
-      "execution_count": 46,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1 :  6  7  10  16\n",
-            "2 :  10  18  19\n",
-            "3 :  4  8\n",
-            "4 :  3  7  11  20\n",
-            "5 :  10  12\n",
-            "6 :  1  8  17  18\n",
-            "7 :  1  4  16\n",
-            "8 :  3  6  11  15\n",
-            "9 :  10\n",
-            "10 :  1  2  5  9  12  15  18\n",
-            "11 :  4  8\n",
-            "12 :  5  10\n",
-            "13 :  14\n",
-            "14 :  13\n",
-            "15 :  8  10  18\n",
+            "1 :  8  15  16  18\n",
+            "2 :  4  19\n",
+            "3 :  6  10  12\n",
+            "4 :  2  7  17\n",
+            "5 :  6  9  17\n",
+            "6 :  3  5  15\n",
+            "7 :  4  14  16  20\n",
+            "8 :  1  13\n",
+            "9 :  5  13\n",
+            "10 :  3  15  17\n",
+            "11 :  15\n",
+            "12 :  3  14  15\n",
+            "13 :  8  9\n",
+            "14 :  7  12  19  20\n",
+            "15 :  1  6  10  11  12\n",
             "16 :  1  7\n",
-            "17 :  6\n",
-            "18 :  2  6  10  15\n",
-            "19 :  2\n",
-            "20 :  4\n",
+            "17 :  4  5  10\n",
+            "18 :  1\n",
+            "19 :  2  14  20\n",
+            "20 :  7  14  19\n",
             "------------------\n",
-            "[{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20}, {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 15, 16, 17, 18, 19, 20}, {13, 14}]\n"
+            "[{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20}, {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20}]\n"
           ]
         }
       ]
@@ -1019,9 +1005,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oxv7TKVASBpy",
-        "outputId": "daca3c97-d21a-49e7-b3be-9d4fe724af5d"
+        "outputId": "c8358276-1872-46b2-f431-2e646912aee9"
       },
-      "execution_count": 55,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -1057,15 +1043,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4oBiL6mITE2L",
-        "outputId": "c42e5446-a777-4a75-8190-7331d6ef49d0"
+        "outputId": "2c1814e2-b487-4dd0-c065-8d5568c1e15c"
       },
-      "execution_count": 57,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Promień : 5  Średnica:  8  Średnio: 4.216433500000003\n"
+            "Promień : 5  Średnica:  8  Średnio: 4.2071055000000035\n"
           ]
         }
       ]
